--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -75,3 +75,4 @@ jobs:
       # You may pin to the exact commit or the version.
       # uses: sunnysid3up/python-linter@93076bd8f740f062069291d738fc70c1b4171c1d
       uses: sunnysid3up/python-linter@v0.1-beta.7
+      source: ./wrapper_synthese/
