--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -77,3 +77,4 @@ jobs:
       uses: sunnysid3up/python-linter@v0.1-beta.7
       with:
         source: ./wrapper_synthese/
+        black-options: false
